team member's contributions

--- a/a3/index.html
+++ b/a3/index.html
@@ -740,7 +740,7 @@
                       Sunday - 6pm
                     </p>
                     <br>
-                    <p class="card-text more-details" id="movieButtonACT" onclick="toggleSynopsis('ACT');"><a
+                    <p class="card-text more-details" onclick="toggleSynopsis('ACT');"><a
                         href="#synopsisACT"><img src="media/clapperboard.svg" alt="clapperboard icon"
                           class="more-details-icon"> Details & Booking</a></p>
                     <img src="media/PG-13.svg" alt="Rated PG-13" width="35%" class="movie-rating">
@@ -768,7 +768,7 @@
                       <br>
                       <br>
                       <br>
-                      <p class="card-text more-details" id="movieButtonRMC" onclick="toggleSynopsis('RMC');">
+                      <p class="card-text more-details" onclick="toggleSynopsis('RMC');">
                         <a href="#synopsisRMC"><img src="media/clapperboard.svg" alt="clapperboard icon"
                             class="more-details-icon"> Details & Booking</a></p>
                       <img src="media/Mature.png" alt="Rated" width="15%" class="movie-rating">
@@ -803,7 +803,7 @@
                       Sunday - 12pm
                     </p>
                     <br>
-                    <p class="card-text more-details" id="movieButtonANM" onclick="toggleSynopsis('ANM');"><a
+                    <p class="card-text more-details" onclick="toggleSynopsis('ANM');"><a
                         href="#synopsisANM"><img src="media/clapperboard.svg" alt="clapperboard icon"
                           class="more-details-icon"> Details & Booking</a></p>
 
@@ -835,7 +835,7 @@
                     <br>
                     <br>
                     <br>
-                    <p class="card-text more-details" id="movieButtonAHF" onclick="toggleSynopsis('AHF');"><a
+                    <p class="card-text more-details" onclick="toggleSynopsis('AHF');"><a
                         href="#synopsisAHF"><img src="media/clapperboard.svg" alt="clapperboard icon"
                           class="more-details-icon"> Details & Booking</a></p>
                     <img src="media/R.svg" alt="Rated R" width="15%" class="movie-rating">
@@ -856,7 +856,7 @@
           <div class="row synopsis">
             <div class="col-md-6">
               <h5 class="synopsis-title">Avengers: Endgame <img src="media/PG-13.svg" alt="Rated PG-13"
-                  class="movie-rating-synopsis"></h5>
+                  class="movie-rating-synopsis" width="20%"></h5>
             </div>
           </div>
           <div class="row synopsis">
@@ -865,7 +865,7 @@
                 description:
               </h6>
               <p style="text-align: justify;">After vanishing half the population of the galaxy, Thanos was on the edge
-                of fulfilling his mission.
+                of fulfilling his mission.<br>
                 However, the rest of the heroes, including Tony Stark (Iron Man), Thor, Captain America, etc. are trying
                 to look for a plan to bring back their love ones and allies to unite once again in order to fight back
                 Thanos and his army. This is the perfect sequel to Avengers Infinity War. This movie ensures a thrilling
@@ -911,7 +911,7 @@
           <div class="row synopsis">
             <div class="col-md-6">
               <h5 class="synopsis-title">Top End Wedding <img src="media/Mature.png" alt="Rated M"
-                  class="movie-rating-synopsis" height="75%" width="5%"></h5>
+                  class="movie-rating-synopsis" height="80%"></h5>
             </div>
           </div>
           <div class="row synopsis">
@@ -919,12 +919,7 @@
               <h6 class="summary-head"><img class="synop-icon" src="media/video-camera.png" alt="Video icon"> Plot
                 description:
               </h6>
-              <p style="text-align: justify;">After vanishing half the population of the galaxy, Thanos was on the edge
-                of fulfilling his mission.
-                However, the rest of the heroes, including Tony Stark (Iron Man), Thor, Captain America, etc. are trying
-                to look for a plan to bring back their love ones and allies to unite once again in order to fight back
-                Thanos and his army. This is the perfect sequel to Avengers Infinity War. This movie ensures a thrilling
-                and action packed movie experience.</p>
+              <p style="text-align: justify;">Engaged and in love Lauren and Ned have just 10 days to reunite her newly separated parents and pull off their dream Top End Wedding. But Lauren's mother has gone missing, experiencing a midlife crisis. In order to find her, the couple goes on a fantastic road trip across northern Australia. <br>Along the way they find fulfillment for their own personal journeys through the wild beauty of the landscapes and the unbeatable charm of the characters that they meet along the way. But will they finally recover Lauren's mother and pursue their dream wedding?</p>
             </div>
             <div class="col-md-6 order-first order-md-last">
               <div class="trailer-container"><iframe width="560" height="315"
@@ -962,8 +957,7 @@
         <div class="synopsis-area">
           <div class="row synopsis">
             <div class="col-md-6">
-              <h5 class="synopsis-title">Dumbo <img src="media/G.svg" alt="Rated G" class="movie-rating-synopsis"
-                  width="10%" height="70%"></h5>
+              <h5 class="synopsis-title">Dumbo <img src="media/G.svg" alt="Rated G" class="movie-rating-synopsis" height="70%"></h5>
             </div>
           </div>
           <div class="row synopsis">
@@ -971,12 +965,8 @@
               <h6 class="summary-head"><img class="synop-icon" src="media/video-camera.png" alt="Video icon"> Plot
                 description:
               </h6>
-              <p style="text-align: justify;">After vanishing half the population of the galaxy, Thanos was on the edge
-                of fulfilling his mission.
-                However, the rest of the heroes, including Tony Stark (Iron Man), Thor, Captain America, etc. are trying
-                to look for a plan to bring back their love ones and allies to unite once again in order to fight back
-                Thanos and his army. This is the perfect sequel to Avengers Infinity War. This movie ensures a thrilling
-                and action packed movie experience.</p>
+              <p style="text-align: justify;">A young circus elephant is born with comically large ears and given the cruel nickname Dumbo. One day at a show, he is taunted by a group of kids, inciting his mother into a rage that gets her locked up. After Dumbo's ears cause an accident that injures many of the other elephants, he is made to dress like a clown and perform dangerous stunts.<br>
+                Everything changes when Dumbo discovers that his enormous ears actually allow him to fly, and he astounds everyone at the circus with his new talent.</p>
             </div>
             <div class="col-md-6 order-first order-md-last">
               <div class="trailer-container">
@@ -1022,7 +1012,7 @@
           <div class="row synopsis">
             <div class="col-md-6">
               <h5 class="synopsis-title">The Happy Prince<img src="media/R.svg" alt="Rated R"
-                  class="movie-rating-synopsis" height="65%"></h5>
+                  class="movie-rating-synopsis" height="70%"></h5>
             </div>
           </div>
           <div class="row synopsis">
@@ -1030,12 +1020,7 @@
               <h6 class="summary-head"><img class="synop-icon" src="media/video-camera.png" alt="Video icon"> Plot
                 description:
               </h6>
-              <p style="text-align: justify;">After vanishing half the population of the galaxy, Thanos was on the edge
-                of fulfilling his mission.
-                However, the rest of the heroes, including Tony Stark (Iron Man), Thor, Captain America, etc. are trying
-                to look for a plan to bring back their love ones and allies to unite once again in order to fight back
-                Thanos and his army. This is the perfect sequel to Avengers Infinity War. This movie ensures a thrilling
-                and action packed movie experience.</p>
+              <p style="text-align: justify;">In a cheap Parisian hotel room Oscar Wilde lies on his death bed. The past floods back, taking him to other times and places. Was he once the most famous man in London? The artist crucified by a society that once worshipped him? <br>Under the microscope of death he reviews the failed attempt to reconcile with his long suffering wife Constance, the ensuing reprisal of his fatal love affair with Lord Alfred Douglas and the warmth and devotion of Robbie Ross, who tried and failed to save him from himself. <br>Travelling through Wilde's final act and journeys through England, France and Italy, the transience of lust is laid bare and the true riches of love are revealed. It is a portrait of the dark side of a genius who lived and died for love.</p>
             </div>
             <div class="col-md-6 order-first order-md-last">
               <div class="trailer-container"><iframe width="560" height="315"
@@ -1196,7 +1181,7 @@
           href="https://github.com/s3804220/s3804220.github.io" class="git-link" target="_blank">Github
           Repo</a>),<br>Doan Nguyen My Hanh (s3639869 - <a href="https://github.com/s3639869/wp" class="git-link"
           target="_blank">Github Repo</a>)<br>Last
-        modified 19/4/2020
+        modified 03/05/2020
         <?= date ("Y F d  H:i", filemtime($_SERVER['SCRIPT_FILENAME'])); ?>.</div>
       <br>
       <div>Disclaimer: This website is not a real website and is being developed as part of a School of Science Web
