--- a/a5/index.html
+++ b/a5/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
-		<!-- bootstrap -->
+		<!-- Template'sbootstrap -->
 		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">      
 		<link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 		
@@ -15,7 +15,7 @@
 		<!-- global styles -->
 		<link href="themes/css/flexslider.css" rel="stylesheet"/>
 		<link href="themes/css/main.css" rel="stylesheet"/>
-
+		
 		<!-- scripts -->
 		<!-- <script src="themes/js/jquery-1.7.2.min.js"></script> -->
 		<!-- <script src="bootstrap/js/bootstrap.min.js"></script>				 -->
@@ -27,50 +27,36 @@
 		<![endif]-->
 	</head>
     <body>		
-		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span4"></div>
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">				
-							<li><a href="#">My Account</a></li>
-							<li><a href="cart.html">Your Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>					
-							<li><a href="register.html">Login</a></li>		
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div id="wrapper" class="container">
 			<section class="navbar main-menu">
 				<div class="navbar-inner main-menu">				
 					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
 					<nav id="menu" class="pull-right">
 						<ul>
-							<li><a href="./products.html">Woman</a>					
+							<li><a href="./products.html">Bandana</a>					
 								<ul>
 									<li><a href="./products.html">Lacinia nibh</a></li>									
 									<li><a href="./products.html">Eget molestie</a></li>
 									<li><a href="./products.html">Varius purus</a></li>									
 								</ul>
 							</li>															
-							<li><a href="./products.html">Man</a></li>			
-							<li><a href="./products.html">Sport</a>
+							<li><a href="./products.html">Medical Mask</a></li>			
+							<li><a href="./products.html">Dust Mask</a>
 								<ul>									
 									<li><a href="./products.html">Gifts and Tech</a></li>
 									<li><a href="./products.html">Ties and Hats</a></li>
 									<li><a href="./products.html">Cold Weather</a></li>
 								</ul>
 							</li>							
-							<li><a href="./products.html">Hangbag</a></li>
+							<!-- <li><a href="./products.html">Hangbag</a></li>
 							<li><a href="./products.html">Best Seller</a></li>
-							<li><a href="./products.html">Top Seller</a></li>
+							<li><a href="./products.html">Top Seller</a></li> -->
+							<li><a href='#'>Your Cart</a></li>
 						</ul>
 					</nav>
 				</div>
 			</section>
-			<section  class="homepage-slider" id="home-slider">
+			<!-- <section  class="homepage-slider" id="home-slider">
 				<div class="flexslider">
 					<ul class="slides">
 						<li>
@@ -86,7 +72,7 @@
 						</li>
 					</ul>
 				</div>			
-			</section>
+			</section> -->
 			<section class="header_text">
 				We stand for top quality templates. Our genuine developers always optimized bootstrap commercial templates. 
 				<br/>Don't miss to use our cheap abd best bootstrap templates.
@@ -97,10 +83,11 @@
 						<div class="row">
 							<div class="span12">
 								<h4 class="title">
-									<span class="pull-left"><span class="text"><span class="line">Feature <strong>Products</strong></span></span></span>
-									<span class="pull-right">
+									<!-- <span class="pull-left"> -->
+										<span class="text"><span class="line">Feature <strong>Products</strong></span></span></span>
+									<!-- <span class="pull-right">
 										<a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
-									</span>
+									</span> -->
 								</h4>
 								<div id="myCarousel" class="myCarousel carousel slide">
 									<div class="carousel-inner">
@@ -109,8 +96,8 @@
 												<li class="span3">
 													<div class="product-box">
 														<span class="sale_tag"></span>
-														<p><a href="product_detail.html"><img src="themes/images/ladies/1.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Ut wisi enim ad</a><br/>
+														<p><a href="product_detail.html"><img src="media/bandana-black.jpg" alt="" /></a></p>
+														<a href="product_detail.html" class="title">Bandana Black</a><br/>
 														<a href="products.html" class="category">Commodo consequat</a>
 														<p class="price">$17.25</p>
 													</div>
@@ -118,24 +105,24 @@
 												<li class="span3">
 													<div class="product-box">
 														<span class="sale_tag"></span>
-														<p><a href="product_detail.html"><img src="themes/images/ladies/2.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Quis nostrud exerci tation</a><br/>
+														<p><a href="product_detail.html"><img src="media/bandana-blue.png" alt="" style='background-color: white;'/></a></p>
+														<a href="product_detail.html" class="title">Bandana Blue</a><br/>
 														<a href="products.html" class="category">Quis nostrud</a>
-														<p class="price">$32.50</p>
+														<p class="price">$17.25</p>
 													</div>
 												</li>
 												<li class="span3">
 													<div class="product-box">
-														<p><a href="product_detail.html"><img src="themes/images/ladies/3.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Know exactly turned</a><br/>
+														<p><a href="product_detail.html"><img src="media/medical-mask-blue.jpg" alt="" /></a></p>
+														<a href="product_detail.html" class="title">Medical Mask Blue</a><br/>
 														<a href="products.html" class="category">Quis nostrud</a>
-														<p class="price">$14.20</p>
+														<p class="price">$20</p>
 													</div>
 												</li>
 												<li class="span3">
 													<div class="product-box">
-														<p><a href="product_detail.html"><img src="themes/images/ladies/4.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">You think fast</a><br/>
+														<p><a href="product_detail.html"><img src="media/dust-mask.jpg" alt="" /></a></p>
+														<a href="product_detail.html" class="title">Dust Mast M3</a><br/>
 														<a href="products.html" class="category">World once</a>
 														<p class="price">$31.45</p>
 													</div>
@@ -186,9 +173,10 @@
 						<div class="row">
 							<div class="span12">
 								<h4 class="title">
-									<span class="pull-left"><span class="text"><span class="line">Latest <strong>Products</strong></span></span></span>
-									<span class="pull-right">
-										<a class="left button" href="#myCarousel-2" data-slide="prev"></a><a class="right button" href="#myCarousel-2" data-slide="next"></a>
+									<!-- <span class="pull-left"> -->
+										<span class="text"><span class="line">Latest <strong>Products</strong></span></span></span>
+									<!-- <span class="pull-right"> -->
+										<!-- <a class="left button" href="#myCarousel-2" data-slide="prev"></a><a class="right button" href="#myCarousel-2" data-slide="next"></a> -->
 									</span>
 								</h4>
 								<div id="myCarousel-2" class="myCarousel carousel slide">
