remove sub category for products.html

--- a/a5/index.html
+++ b/a5/index.html
@@ -15,7 +15,8 @@
 		<!-- global styles -->
 		<link href="themes/css/flexslider.css" rel="stylesheet"/>
 		<link href="themes/css/main.css" rel="stylesheet"/>
-		
+		<!--Student's CSS-->
+		<link href="style.css" rel="stylesheet"/>
 		<!-- scripts -->
 		<!-- <script src="themes/js/jquery-1.7.2.min.js"></script> -->
 		<!-- <script src="bootstrap/js/bootstrap.min.js"></script>				 -->
@@ -97,8 +98,8 @@
 													<div class="product-box">
 														<span class="sale_tag"></span>
 														<p><a href="product_detail.html"><img src="media/bandana-black.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Bandana Black</a><br/>
-														<a href="products.html" class="category">Commodo consequat</a>
+														<a href="product_detail.html" class="title">Black Bandana</a><br/>
+														<a href="products.html" class="category">Bandana</a>
 														<p class="price">$17.25</p>
 													</div>
 												</li>
@@ -129,7 +130,7 @@
 												</li>
 											</ul>
 										</div>
-										<div class="item">
+										<!-- <div class="item">
 											<ul class="thumbnails">
 												<li class="span3">
 													<div class="product-box">
@@ -164,7 +165,7 @@
 													</div>
 												</li>																																	
 											</ul>
-										</div>
+										</div> -->
 									</div>							
 								</div>
 							</div>						
@@ -218,7 +219,7 @@
 												</li>
 											</ul>
 										</div>
-										<div class="item">
+										<!-- <div class="item">
 											<ul class="thumbnails">
 												<li class="span3">
 													<div class="product-box">
@@ -253,7 +254,7 @@
 													</div>
 												</li>																																	
 											</ul>
-										</div>
+										</div> -->
 									</div>							
 								</div>
 							</div>						
@@ -313,6 +314,7 @@
 					</div>
 				</div>
 			</section>
+			<a href="#top"><img id="TopBtn" src="media/top.png" alt="Back to Top"></a>
 			<section id="footer-bar">
 				<div class="row">
 					<div class="span3">
