--- a/a5/products.html
+++ b/a5/products.html
@@ -159,7 +159,7 @@
 							</li>
 						</ul>								
 						<hr>
-						<div class="pagination pagination-small pagination-centered">
+						<!-- <div class="pagination pagination-small pagination-centered">
 							<ul>
 								<li><a href="#">Prev</a></li>
 								<li class="active"><a href="#">1</a></li>
@@ -168,9 +168,9 @@
 								<li><a href="#">4</a></li>
 								<li><a href="#">Next</a></li>
 							</ul>
-						</div>
+						</div> -->
 					</div>
-					<div class="span3 col">
+					<!-- <div class="span3 col">
 						<div class="block">	
 							<ul class="nav nav-list">
 								<li class="nav-header">SUB CATEGORIES</li>
@@ -250,7 +250,7 @@
 								</li>   
 							</ul>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</section>
 			<section id="footer-bar">
