Add more products and link them to correct category page + link navbar

--- a/a5/index.html
+++ b/a5/index.html
@@ -34,20 +34,20 @@
 					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt=""></a>
 					<nav id="menu" class="pull-right">
 						<ul>
-							<li><a href="./products.html">Bandana</a>					
-								<ul>
+							<li><a href="bandana.html">Bandana</a>					
+								<!-- <ul>
 									<li><a href="./products.html">Lacinia nibh</a></li>									
 									<li><a href="./products.html">Eget molestie</a></li>
 									<li><a href="./products.html">Varius purus</a></li>									
-								</ul>
+								</ul> -->
 							</li>															
-							<li><a href="./products.html">Medical Mask</a></li>			
-							<li><a href="./products.html">Dust Mask</a>
-								<ul>									
+							<li><a href="medical-mask.html">Medical Mask</a></li>			
+							<li><a href="dust-mask.html">Dust Mask</a>
+								<!-- <ul>									
 									<li><a href="./products.html">Gifts and Tech</a></li>
 									<li><a href="./products.html">Ties and Hats</a></li>
 									<li><a href="./products.html">Cold Weather</a></li>
-								</ul>
+								</ul> -->
 							</li>							
 							<!-- <li><a href="./products.html">Hangbag</a></li>
 							<li><a href="./products.html">Best Seller</a></li>
@@ -98,8 +98,8 @@
 													<div class="product-box">
 														<span class="sale_tag"></span>
 														<p><a href="product_detail.html"><img src="media/bandana-black.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Black Bandana</a><br/>
-														<a href="products.html" class="category">Bandana</a>
+														<a href="product_detail.html" class="title">Bandana Black</a><br/>
+														<a href="bandana.html" class="category">Bandana</a>
 														<p class="price">$17.25</p>
 													</div>
 												</li>
@@ -108,7 +108,7 @@
 														<span class="sale_tag"></span>
 														<p><a href="product_detail.html"><img src="media/bandana-blue.png" alt="" style='background-color: white;'/></a></p>
 														<a href="product_detail.html" class="title">Bandana Blue</a><br/>
-														<a href="products.html" class="category">Quis nostrud</a>
+														<a href="bandana.html" class="category">Bandana</a>
 														<p class="price">$17.25</p>
 													</div>
 												</li>
@@ -116,7 +116,7 @@
 													<div class="product-box">
 														<p><a href="product_detail.html"><img src="media/medical-mask-blue.jpg" alt="" /></a></p>
 														<a href="product_detail.html" class="title">Medical Mask Blue</a><br/>
-														<a href="products.html" class="category">Quis nostrud</a>
+														<a href="medical-mask.html" class="category">Medical Mask</a>
 														<p class="price">$20</p>
 													</div>
 												</li>
@@ -124,7 +124,7 @@
 													<div class="product-box">
 														<p><a href="product_detail.html"><img src="media/dust-mask.jpg" alt="" /></a></p>
 														<a href="product_detail.html" class="title">Dust Mast M3</a><br/>
-														<a href="products.html" class="category">World once</a>
+														<a href="dust-mask.html" class="category">Dust Mask</a>
 														<p class="price">$31.45</p>
 													</div>
 												</li>
@@ -187,33 +187,33 @@
 												<li class="span3">
 													<div class="product-box">
 														<span class="sale_tag"></span>
-														<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware2.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Ut wisi enim ad</a><br/>
-														<a href="products.html" class="category">Commodo consequat</a>
-														<p class="price">$25.50</p>
+														<p><a href="product_detail.html"><img src="media/medical-mask-white.jpg" alt="" style='height: 270px;'/></a></p>
+														<a href="product_detail.html" class="title">Medical Mask White</a><br/>
+														<a href="medical-mask.html" class="category">Medical Mask</a>
+														<p class="price">$27</p>
 													</div>
 												</li>
 												<li class="span3">
 													<div class="product-box">
-														<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware1.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Quis nostrud exerci tation</a><br/>
-														<a href="products.html" class="category">Quis nostrud</a>
+														<p><a href="product_detail.html"><img src="media/medical-mask-black.jpg" alt="" /></a></p>
+														<a href="product_detail.html" class="title">Medical Mask Black</a><br/>
+														<a href="medical-mask.html" class="category">Medical Mask</a>
 														<p class="price">$17.55</p>
 													</div>
 												</li>
 												<li class="span3">
 													<div class="product-box">
-														<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware6.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">Know exactly turned</a><br/>
-														<a href="products.html" class="category">Quis nostrud</a>
+														<p><a href="product_detail.html"><img src="media/dusk-mask-black-filter.jpg" alt="" style='height: 270px;'/></a></p>
+														<a href="product_detail.html" class="title">Dust Mask Black With Filter</a><br/>
+														<a href="products.html" class="category">Dust Mask</a>
 														<p class="price">$25.30</p>
 													</div>
 												</li>
 												<li class="span3">
 													<div class="product-box">
-														<p><a href="product_detail.html"><img src="themes/images/cloth/bootstrap-women-ware5.jpg" alt="" /></a></p>
-														<a href="product_detail.html" class="title">You think fast</a><br/>
-														<a href="products.html" class="category">World once</a>
+														<p><a href="product_detail.html"><img src="media/bandana-skull.jpg" alt="" style='height: 270px;'/></a></p>
+														<a href="product_detail.html" class="title">Bandana Skull</a><br/>
+														<a href="bandana.html" class="category">Bandana</a>
 														<p class="price">$25.60</p>
 													</div>
 												</li>
