change title for category pages

--- a/a5/medical-mask.html
+++ b/a5/medical-mask.html
@@ -75,7 +75,7 @@
 			</section>	
 			<section class="header_text sub">
 			<img class="pageBanner" src="themes/images/pageBanner.png" alt="New products" >
-				<h4><span>Bandanas</span></h4>
+				<h4><span>Medical Masks</span></h4>
 			</section>
 			<section class="main-content">
 				
