--- a/a5/dust-mask.html
+++ b/a5/dust-mask.html
@@ -59,7 +59,7 @@
 								</ul> -->
 							</li>															
 							<li><a href="medical-mask.html">Medical Mask</a></li>			
-							<li><a href="dust-mask.html">Dust Masks</a>
+							<li><a href="dust-mask.html">Dust Mask</a>
 								<!-- <ul>									
 									<li><a href="./products.html">Gifts and Tech</a></li>
 									<li><a href="./products.html">Ties and Hats</a></li>
