--- a/a5/bandana.html
+++ b/a5/bandana.html
@@ -267,21 +267,21 @@
 					<div class="span3">
 						<h4>Navigation</h4>
 						<ul class="nav">
-							<li><a href="./index.html">Homepage</a></li>  
-							<li><a href="./about.html">About Us</a></li>
-							<li><a href="./contact.html">Contac Us</a></li>
-							<li><a href="./cart.html">Your Cart</a></li>
-							<li><a href="./register.html">Login</a></li>							
+							<li><a href="./index.html">Home</a></li>  
+							<li><a href="bandana.html">Bandana</a></li>
+							<li><a href="medical-mask.html">Medical Mask</a></li>
+							<li><a href="dust-mask.html">Dust Mask</a></li>
+							<li><a href="./cart.html">Cart</a></li>							
 						</ul>					
 					</div>
 					<div class="span4">
-						<h4>My Account</h4>
+						<!-- <h4>My Account</h4>
 						<ul class="nav">
 							<li><a href="#">My Account</a></li>
 							<li><a href="#">Order History</a></li>
 							<li><a href="#">Wish List</a></li>
 							<li><a href="#">Newsletter</a></li>
-						</ul>
+						</ul> -->
 					</div>
 					<div class="span5">
 						<p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
